tests/snapshots/tui_snapshot__approval_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 313
expression: dump
---
 HITL approvals  0 pending

────────────────────────────────────────────────────────────────────────────────
 No pending approvals.
