tests/snapshots/tui_snapshot__backup_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 246
expression: dump
---
 🛡️  Backup Health Board (Cluster-wide VZDump Audit)

────────────────────────────────────────────────────────────────────────────────────────────────────
 No guests to monitor.
