tests/snapshots/tui_snapshot__compare_view_with_two_selected_guests.snap
---
source: tests/tui_snapshot.rs
assertion_line: 352
expression: dump
---
┌ Config Drift Detector (2 guests) ────────────────────────────────────────────────────────────────┐
│Property        100 (vm-prod)                             101 (vm-staging)                        │
│                                                                                                  │
│vmid            100                                       101                                     │
│name            vm-prod                                   vm-staging                              │
│type            Qemu                                      Qemu                                    │
│status          Running                                   Running                                 │
│node            pve1                                      pve1                                    │
│cpu cores       2                                         2                                       │
│ram             2.0G                                      2.0G                                    │
│disk            16.0G                                     16.0G                                   │
│tags                                                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
