tests/snapshots/tui_snapshot__dashboard_empty_cluster_does_not_panic_and_shows_idle_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 173
expression: dump
---
 ⚡  proxxx │ 0 nodes │ 0/0 guests

────────────────────────────────────────────────────────────────────────────────
 ⏳  Loading cluster data...



















 NORMAL  │ j/k nav Enter select / search : cmd q quit
