tests/snapshots/tui_snapshot__dashboard_with_two_nodes_aggregates_correctly.snap
---
source: tests/tui_snapshot.rs
expression: dump
---
 ⚡  proxxx │ 2 nodes │ 1/2 guests

────────────────────────────────────────────────────────────────────────────────────────────────────
┌ CPU ──────────────────────────┐┌ RAM ───────────────────────────┐┌ DISK ─────────────────────────┐
│███████                        ││████████████                    ││█                              │
│██████21%  (1.7/8 cores)       ││███████38%  (6.0G/16.0G)        ││█      3%  (4.0G/128.0G)       │
│███████                        ││████████████                    ││█                              │
└───────────────────────────────┘└────────────────────────────────┘└───────────────────────────────┘
┌ Nodes ───────────────────────────────────────────────────────────────────────────────────────────┐
│   NODE                                       STATUS   CPU    RAM              DISK   UPTIME      │
│●  pve1                                       online   12%    50% (8.0G)       3%     1d 0h 0m    │
│●  pve2                                       online   30%    25% (8.0G)       3%     1d 0h 0m    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
