tests/snapshots/tui_snapshot__fleet_view_renders_reachable_and_down_clusters.snap
---
source: tests/tui_snapshot.rs
assertion_line: 659
expression: dump
---
 Fleet  3 clusters  2 reachable  1 down
┌ Clusters ────────────────────────────────────────────────────────────────────────────────────────┐
│   cluster               status               nodes guests    cpu    mem           storage        │
│>  homelab-a             ● OK                 1     1/1       4c     8.0G/64.0G    50.0G/200.0G   │
│   standalone-b          ● OK                 1     1/0       4c     4.0G/32.0G    50.0G/200.0G   │
│   prod-c                ● connection refused 1     1/0       4c     0M/0M         0M/0M          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Guests · all fleet [4] ──────────────────────────────────────────────────────────────────────────┐
│cluster      vmid   name                                 type status   node         cpu   mem     │
│homelab-a    100    web                                  VM   running  a1           5%    512M    │
│homelab-a    200    cache                                LXC  stopped  a1           0%    0M      │
│prod-c       400    db                                   VM   running  c1           5%    512M    │
│standalone-b 300    media                                VM   running  b1           5%    512M    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 q quit · ↑↓ select · Enter open cluster · Tab: all-fleet guests · read-only
