tests/snapshots/tui_snapshot__grep_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 361
expression: dump
---
┌ Cluster-wide Config Grep (Enter to search, Esc to exit) ─────────────────────────────────────────┐
│ Query:                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ 0 Matches ───────────────────────────────────────────────────────────────────────────────────────┐
│vmid      name                  key                   value                                       │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
