tests/snapshots/tui_snapshot__ha_console_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 370
expression: dump
---
 cluster status ────────────────────────────────────────────────────────────────────────────────────
Cluster:    NO QUORUM  ·  0/0 nodes online
HA master:  (unknown)   mode: (unknown)
Nodes:
 (* = local node — the one proxxx is connected to)


 HA groups (0) ───────────────────────── HA resources (0) ──────────────────────────────────────────
group              priority             sid       group     node      state     if-fails ->






 replication jobs (0 HEALTHY) ──────────────────────────────────────────────────────────────────────
job        src      dst      RPO            fails      last-error
