tests/snapshots/tui_snapshot__hardware_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 286
expression: dump
---
 hardware inventory
node:    pve1
0 PCI devices  ·  0 USB devices  ·  0 GPUs  ·  0 mdev-capable
────────────────────────────────────────────────────────────────────────────────────────────────────
┌ PCI (0 devices, 0 GPUs) ─────────────────────────────────────────────────────────────────────────┐
│pci device                              iommu        mdev   assigned to                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ conflicts ───────────────────────────────────────────────────────────────────────────────────────┐
│✓ no passthrough conflicts detected                                                               │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
