tests/snapshots/tui_snapshot__heatmap_view_empty_state.snap
---
source: tests/tui_snapshot.rs
assertion_line: 295
expression: dump
---
 🔥  Live Hotspot Heatmap (Sorted by CPU+RAM Saturation)

────────────────────────────────────────────────────────────────────────────────────────────────────
 No guests to monitor.
